public class Main {

    public static void main(String[] args){
    final int NUM_OF_HORSES = 5;
    HorseRace.launch(NUM_OF_HORSES);
    }

}
