@startuml

title __JAVA's Class Diagram__\n

  namespace  {
    class Horse {
        - isWinner : boolean
        - name : String
        - positionX : int
        - positionY : int
        + awardWin()
        + getName()
        + getPositionX()
        + getPositionY()
        + isWinner()
        + setPositionX()
        + setPositionY()
        ~a Horse()
    }
  }
  

  namespace  {
    class HorseRace {
        ~ endTime : long
        ~ horseTracks : List<Canvas>
        ~ isRaceInProgress : boolean
        ~ lock : Lock
        ~ startTime : long
        ~ threads : List<Thread>
        {static} - NUM_HORSES : int
        + getFormattedTimeInSeconds()
        + getRandomNumber()
        {static} + launch()
        + start()
        - getButton()
        - getButtonBar()
        - getHorseTrack()
        - interruptAllThreads()
        - setWinner()
        - showWinner()
        - startRace()
    }
  }
  

  namespace  {
    class HorseRace.Animate {
        ~ LENGTH_OF_TRACK : int
        ~ gc : GraphicsContext
        + drawHorse()
        + moveHorse()
        + run()
        ~ Animate()
    }
  }
  

  namespace  {
    class HorseRace.ResetHandler {
        + handle()
    }
  }
  

  namespace  {
    class HorseRace.StartHandler {
        + handle()
    }
  }
  

  namespace  {
    class HorseRace.StopHandler {
        + handle()
    }
  }
  

  namespace  {
    class Main {
        {static} + main()
    }
  }
  

  HorseRace -up-|> javafx.application.Application
  HorseRace o-- Horse : winner
  HorseRace +-down- HorseRace.Animate
  HorseRace +-down- HorseRace.ResetHandler
  HorseRace +-down- HorseRace.StartHandler
  HorseRace +-down- HorseRace.StopHandler
  HorseRace.Animate .up.|> java.lang.Runnable
  HorseRace.Animate o-- Horse : horse
  HorseRace.ResetHandler .up.|> javafx.event.EventHandler
  HorseRace.StartHandler .up.|> javafx.event.EventHandler
  HorseRace.StopHandler .up.|> javafx.event.EventHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
